2003-09-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Fixed "id" attribute processing
	* src/ejabberd_s2s_out.erl: Likewise

	* src/ejabberd_c2s.erl: Added sending of empty <stream:features/>
	element after opening of authentificated stream

2003-09-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Temporary hack for "id" attribute
	processing
	* src/ejabberd_s2s_out.erl: Likewise

2003-08-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_listener.erl: Fixed SSL options

2003-08-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Support for filtering of incoming messages
	and IQs, presence filtering will be after some xmpp-im
	clarifications

2003-08-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Fixed handling of room names with
	uppercase letters

	* src/mod_muc/mod_muc_room.erl: Added support for
	password-protected rooms

2003-08-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Added handling for
	jabber:iq:version and jabber:iq:time requests, participant address
	now added to presence status

2003-08-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_privacy.erl: Privacy rules support (not completed yet)
	* src/ejabberd_c2s.erl: Likewise
	* src/mod_roster.erl: Likewise

2003-07-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl (create_new_node): Bugfix

2003-07-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard.erl: Bugfix

	* src/mod_roster.erl: Bugfix

	* src/jlib.hrl: Added iq:privacy namespace

	* src/mod_irc/mod_irc_connection.erl: Added support for NOTICE and
	CODEPAGE commands, better support for QUIT and PART commands
	(thanks to Oleg V. Motienko)

2003-07-20  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Reorganized supervision tree

2003-07-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_register.erl: Bugfix

2003-07-14  Alexey Shchepin  <alexey@sevcom.net>
