@@ -1,0 +1,70 @@
+% $Id$
+
+%override_acls.
+
+{acl, admin, {user, "mrose"}}.
+{acl, admin, {user, "test"}}.
+{acl, admin, {user, "mrose", "jabber.dbc.mtview.ca.us"}}.
+{acl, admin, {user, "test", "jabber.dbc.mtview.ca.us"}}.
+
+{acl, jabberorg, {server, "jabber.org"}}.
+{acl, mrose, {user, "mrose", "jabber.dbc.mtview.ca.us"}}.
+
+
+{shaper, normal, {maxrate, 1000}}.
+
+
+{access, disco_admin, [{allow, admin},
+                       {deny, all}]}.
+
+{access, configure, [{allow, admin}]}.
+
+{access, c2s, [{deny, blocked},
+	       {allow, all}]}.
+
+
+{access, c2s_shaper, [{none, admin},
+		      {normal, all}]}.
+
+{access, muc_admin, [{allow, admin}]}.
+
+
+{host, "jabber.dbc.mtview.ca.us"}.
+
+{listen, [{5222, ejabberd_c2s,     [{access, c2s},
+				    {shaper, c2s_shaper}]},
+	  {5223, ejabberd_c2s,     [{access, c2s},
+				    {ssl, [{certfile, "/etc/openssl/certs/ejabberd.pem"}]}]},
+          {5269, ejabberd_s2s_in,  []},
+          {8888, ejabberd_service, [{host,
+				     "conference.jabber.dbc.mtview.ca.us",
+				     [{password, "asdqwe"}]}]}
+         ]}.
+
+% This value (5569) is only for debugging, must be 5269
+{outgoing_s2s_port, 5269}.
+
+{modules, [
+           {mod_register,  []},
+           {mod_roster,    []},
+           {mod_privacy,   []},
+           {mod_configure, []},
+           {mod_disco,     []},
+           {mod_stats,     []},
+           {mod_vcard,     []},
+           {mod_offline,   []},
+           {mod_echo,      [{host, "echo.jabber.dbc.mtview.ca.us"}]},
+           {mod_private,   []},
+%          {mod_irc,       []},
+           {mod_muc,       []},
+           {mod_pubsub,    []},
+           {mod_time,      [{iqdisc, no_queue}]},
+           {mod_version,   []}
+          ]}.
+
+
+
+
+% Local Variables:
+% mode: erlang
+% End:
